fixed spacing on about us top

--- a/src/Pages/About/top-desc/page.css
+++ b/src/Pages/About/top-desc/page.css
@@ -86,9 +86,9 @@
 .exp-text {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:center;
+    margin-bottom: 4vh;
     gap: 3vh;
-    /* background-color: #FF4E0D; */
 }
 
 .exp-text h1 {
